<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="29dp">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/IntButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:onClick="viewPlot"
                    android:orientation="vertical"
                    android:text="@string/inter"
                    android:textSize="18sp">


                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:src="@drawable/ic_blur_on_black_24dp" />

                    <TextView
                        android:id="@+id/interest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/def"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/inter"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/StrButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:onClick="check"
                    android:orientation="vertical"
                    android:text="@string/inter"
                    android:textSize="18sp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/ic_flash_on_black_24dp" />

                    <TextView
                        android:id="@+id/str"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/def"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/strs"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/relButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:onClick="check"
                    android:orientation="vertical"
                    android:text="@string/inter"
                    android:textSize="18sp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:src="@drawable/ic_spa_black_24dp" />

                    <TextView
                        android:id="@+id/rel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/def"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/rel"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/excButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:onClick="check"
                    android:orientation="vertical"
                    android:text="@string/inter"
                    android:textSize="18sp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:src="@drawable/ic_toys_black_24dp" />

                    <TextView
                        android:id="@+id/exc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/def"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/exc"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/engButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:onClick="check"
                    android:orientation="vertical"
                    android:text="@string/inter"
                    android:textSize="18sp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:src="@drawable/ic_hearing_black_24dp" />

                    <TextView
                        android:id="@+id/eng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/def"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/eng"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/focButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:onClick="check"
                    android:orientation="vertical"
                    android:text="@string/inter"
                    android:textSize="18sp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:src="@drawable/ic_center_focus_weak_black_24dp" />

                    <TextView
                        android:id="@+id/foc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/def"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/foc"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="370dp"
                android:layout_height="282dp"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/mapButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:onClick="launchMap"
                    android:orientation="vertical"
                    android:text="@string/inter"
                    android:textSize="18sp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:src="@drawable/ic_map_black_24dp" />


                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/map"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/annie_use_your_telescope" />
                </LinearLayout>
            </TableRow>

        </TableLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>